# wgpu-renderer-template

./: CMakeLists.txt  main.cpp  remake.sh
lib/: adapter.cpp  adapter.h  command_encoder.cpp  command_encoder.h  command_queue.cpp  command_queue.h  device.cpp  device.h  pipeline.cpp  pipeline.h  renderpass.cpp  renderpass.h  shaders.cpp  shaders.h  swapchain.cpp  swapchain.h
